--- a/src/app/Auth/components/login/login.component.html
+++ b/src/app/Auth/components/login/login.component.html
@@ -1,17 +1,17 @@
 <div class="p-d-flex p-jc-center">
   <p-panel class="p-col-6 p-d-flex p-jc-center" header="Login">
-    <form action="loginForms">
+    <form [formGroup]="loginForms">
       <div class="p-col-12">
         <div class="p-inputgroup">
           <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-          <input type="text" pInputText placeholder="Username" />
+          <input type="text" pInputText placeholder="Username" formControlName="username" />
         </div>
       </div>
 
       <div class="p-col-12">
         <div class="p-inputgroup">
           <span class="p-inputgroup-addon"><i class="pi pi-lock"></i></span>
-          <input type="text" pInputText placeholder="Password" />
+          <input type="password" pInputText placeholder="Password" formControlName="password" />
         </div>
       </div>
       <div class="p-col-12">
@@ -27,10 +27,10 @@
           <button
             pButton
             pRipple
-            type="button"
+            type="submit"
             label="Logar"
             icon="pi pi-check"
-            onsubmit="loginForms"
+            (click)="login()"
           ></button>
         </div>
       </div>
