chore: implementing login logic start

--- a/src/app/Auth/components/login/login.component.html
+++ b/src/app/Auth/components/login/login.component.html
@@ -30,7 +30,7 @@
             type="submit"
             label="Logar"
             icon="pi pi-check"
-            (click)="login()"
+            (click)="userLogin()"
           ></button>
         </div>
       </div>
