chore: login logic adjustment

--- a/src/app/Auth/components/login/login.component.html
+++ b/src/app/Auth/components/login/login.component.html
@@ -20,16 +20,17 @@
             pButton
             pRipple
             type="button"
-            label="Sair"
-            icon="pi pi-times"
-            class="p-button-danger"
+            label="Register"
+            icon="pi pi-pencil"
+            class="p-button-info"
           ></button>
           <button
             pButton
             pRipple
             type="submit"
             label="Logar"
-            icon="pi pi-check"
+            icon="pi pi-sign-in"
+            iconPos="right"
             (click)="userLogin()"
           ></button>
         </div>
