--- a/src/app/Auth/components/login/login.component.html
+++ b/src/app/Auth/components/login/login.component.html
@@ -26,8 +26,7 @@
           ></button>
           <button
             pButton
-            pRipple
-            type="submit"
+            sssss
             label="Logar"
             icon="pi pi-sign-in"
             iconPos="right"
