--- a/src/app/Auth/components/login/login.component.html
+++ b/src/app/Auth/components/login/login.component.html
@@ -1,38 +1,46 @@
-<div class="p-d-flex p-jc-center">
-  <p-panel class="p-col-6 p-d-flex p-jc-center" header="Login">
-    <form [formGroup]="loginForms">
-      <div class="p-col-12">
-        <div class="p-inputgroup">
-          <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-          <input type="text" pInputText placeholder="Username" formControlName="username" />
-        </div>
+<div class="p-d-flex p-jc-center" style="padding-top: 20vh; padding-bottom: 20vh">
+  <p-panel header="Login" class="p-md-3">
+    <form [formGroup]="loginForms" class="p-grid p-flex-column">
+      <div class="p-col-12 p-inputgroup">
+        <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+        <input
+          type="email"
+          pInputText
+          placeholder="Email"
+          formControlName="email"
+          style="width: 100%"
+        />
       </div>
 
-      <div class="p-col-12">
-        <div class="p-inputgroup">
-          <span class="p-inputgroup-addon"><i class="pi pi-lock"></i></span>
-          <input type="password" pInputText placeholder="Password" formControlName="password" />
-        </div>
+      <div class="p-col-12 p-inputgroup">
+        <span class="p-inputgroup-addon"><i class="pi pi-lock"></i></span>
+        <input
+          type="password"
+          pInputText
+          placeholder="Password"
+          formControlName="password"
+          style="width: 100%"
+        />
       </div>
-      <div class="p-col-12">
-        <div class="p-d-flex p-jc-between">
-          <button
-            pButton
-            pRipple
-            type="button"
-            label="Register"
-            icon="pi pi-pencil"
-            class="p-button-info"
-          ></button>
-          <button
-            pButton
-            sssss
-            label="Logar"
-            icon="pi pi-sign-in"
-            iconPos="right"
-            (click)="userLogin()"
-          ></button>
-        </div>
+
+      <div class="p-col-12 p-d-flex p-jc-between">
+        <button
+          pButton
+          pRipple
+          type="button"
+          label="Register"
+          icon="pi pi-pencil"
+          class="p-button-info"
+          (click)="handleRegister()"
+        ></button>
+        <button
+          pButton
+          sssss
+          label="Logar"
+          icon="pi pi-sign-in"
+          iconPos="right"
+          (click)="handleLogin()"
+        ></button>
       </div>
     </form>
   </p-panel>
