--- a/src/app/Auth/components/register/register.component.html
+++ b/src/app/Auth/components/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="p-d-flex p-jc-center" style="padding-top: 20vh; padding-bottom: 20vh">
+<div class="p-d-flex p-jc-center padding">
   <p-panel header="Registrar Novo Usuario" class="p-lg-4">
     <form [formGroup]="userRegister">
       <div class="p-grid p-fluid">
@@ -9,7 +9,7 @@
               type="text"
               pInputText
               placeholder="Username"
-              formControlName="username"
+              formControlName="name"
               style="width: 100%"
             />
           </div>
