--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="p-d-flex p-flex-column">
-  <div class="p-mb-4" *ngIf="isAuthenticate"><app-menu></app-menu></div>
+<app-menu *ngIf="isAuthenticate"></app-menu>
+<div class="p-d-flex p-flex-column" style="margin-top: 20px">
   <div class="p-mb-4"><router-outlet></router-outlet></div>
 </div>
