feat: implementation of the wallets carousel and change in imports

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,12 +1,12 @@
 <p-menubar [model]="items">
   <ng-template pTemplate="start">
     <p-avatar
-      image="assets/showcase/images/demo/walter.jpg"
+      [image]="urlAvatar"
       pBadge
       value="4"
       severity="danger"
       styleClass="p-mr-2"
-      size="xlarge"
+      size="large"
       shape="circle"
     ></p-avatar>
   </ng-template>
