feat: implementation of transaction cards

--- a/src/app/Auth/components/login/login.component.html
+++ b/src/app/Auth/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="p-d-flex p-jc-center" style="padding-top: 20vh; padding-bottom: 20vh">
+<div class="p-d-flex p-jc-center padding">
   <p-panel header="Login" class="p-md-3">
     <div [formGroup]="loginForms" class="p-grid p-flex-column">
       <div class="p-col-12 p-inputgroup">
