--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -1,20 +1,3 @@
-<p-table [value]="transactions">
-  <ng-template pTemplate="header">
-    <tr>
-      <th>Transação</th>
-      <th>Valor</th>
-      <th>Data</th>
-      <th>Status</th>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-transaction let-columns="columns">
-    <tr>
-      <td>{{ transaction.name }}</td>
-      <td>{{ transaction.value | currency: "BRL" }}</td>
-      <td>{{ transaction.date }}</td>
-      <td>
-        <span>{{ transaction.status }}</span>
-      </td>
-    </tr>
-  </ng-template>
-</p-table>
+<div class="p-d-flex p-jc-center" style="padding: 20px">
+  <app-card-transaction></app-card-transaction>
+</div>
