--- a/src/app/components/carousel-wallets/carousel-wallets.component.html
+++ b/src/app/components/carousel-wallets/carousel-wallets.component.html
@@ -1,4 +1,10 @@
-<p-carousel [value]="wallets" [numVisible]="1" [numScroll]="1" [circular]="false">
+<p-carousel
+  [value]="wallets"
+  [numVisible]="1"
+  [numScroll]="1"
+  [circular]="false"
+  (onPage)="emmitIdWallet($event.page)"
+>
   <ng-template let-wallets pTemplate="item">
     <div class="product-item p-d-flex p-jc-center">
       <div class="p-d-flex p-flex-column">
@@ -6,17 +12,17 @@
           <div class="card">
             <h1 class="p-mb-1">{{ wallets.name }}</h1>
             <div class="graphic-bar">
-              <div class="income-bar" style="width: {{ bars[wallets.id - 1].bar1 }}%"></div>
-              <div class="outcome-bar" style="width: {{ bars[wallets.id - 1].bar2 }}%  "></div>
+              <div class="income-bar" style="width: {{ bars[wallets.id].bar1 }}%"></div>
+              <div class="outcome-bar" style="width: {{ bars[wallets.id].bar2 }}%  "></div>
             </div>
             <div class="p-d-flex p-jc-between">
               <div class="p-d-flex p-flex-column p-ai-start">
-                <span class="income">{{ bars[wallets.id - 1].bar1 }} %</span>
+                <span class="income">{{ bars[wallets.id].bar1 }} %</span>
                 <h4 class="income">{{ functionalities.formatCurrency(wallets.income) }}</h4>
               </div>
 
               <div class="p-d-flex p-flex-column p-ai-end">
-                <span class="outcome">{{ bars[wallets.id - 1].bar2 }} %</span>
+                <span class="outcome">{{ bars[wallets.id].bar2 }} %</span>
                 <h4 class="outcome">
                   {{ functionalities.formatCurrency(wallets.outcome) }}
                 </h4>
