--- a/src/app/components/transactions/components-addons/card-transaction/card-transaction.component.scss
+++ b/src/app/components/transactions/components-addons/card-transaction/card-transaction.component.scss
@@ -18,6 +18,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 
   border-radius: 10px 0 0 10px;
   width: 100px;
@@ -25,6 +26,11 @@
 
 .icon i {
   font-size: 3.5rem;
+}
+
+.icon span {
+  font-weight: 700;
+  margin-top: 15px;
 }
 
 .card-body {
@@ -45,6 +51,10 @@
 }
 
 .card-price {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-end;
   padding: 10px 30px 20px 0;
 }
 
