--- a/src/app/components/carousel-wallets/carousel-wallets.component.scss
+++ b/src/app/components/carousel-wallets/carousel-wallets.component.scss
@@ -9,8 +9,8 @@
     rgba(230, 230, 230, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 
   border-radius: 20px;
-  width: 400px;
-  height: 220px;
+  width: 22vw;
+  height: 24vh;
   padding: 20px;
   margin-top: 15px;
   margin-bottom: 15px;
