--- a/src/app/components/transactions/components-addons/card-transaction/card-transaction.component.scss
+++ b/src/app/components/transactions/components-addons/card-transaction/card-transaction.component.scss
@@ -10,8 +10,8 @@
   border-radius: 10px;
 
   margin-bottom: 20px;
-  height: 150px;
-  width: 780px;
+  height: 15vh;
+  width: 50vw;
 }
 
 .icon {
@@ -21,7 +21,7 @@
   flex-direction: column;
 
   border-radius: 10px 0 0 10px;
-  width: 100px;
+  width: 20%;
 }
 
 .icon i {
