--- a/src/app/Auth/components/login/login.component.html
+++ b/src/app/Auth/components/login/login.component.html
@@ -3,24 +3,12 @@
     <div [formGroup]="loginForms" class="p-grid p-flex-column">
       <div class="p-col-12 p-inputgroup">
         <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-        <input
-          type="email"
-          pInputText
-          placeholder="Email"
-          formControlName="email"
-          style="width: 100%"
-        />
+        <input type="email" pInputText placeholder="Email" formControlName="email" />
       </div>
 
       <div class="p-col-12 p-inputgroup">
         <span class="p-inputgroup-addon"><i class="pi pi-lock"></i></span>
-        <input
-          type="password"
-          pInputText
-          placeholder="Password"
-          formControlName="password"
-          style="width: 100%"
-        />
+        <input type="password" pInputText placeholder="Password" formControlName="password" />
       </div>
 
       <div class="p-col-12 p-d-flex p-jc-between">
