--- a/src/app/components/carousel-wallets/carousel-wallets.component.html
+++ b/src/app/components/carousel-wallets/carousel-wallets.component.html
@@ -5,26 +5,26 @@
   [circular]="false"
   (onPage)="emmitIdWallet($event.page)"
 >
-  <ng-template let-wallets pTemplate="item">
+  <ng-template let-wallet pTemplate="item">
     <div class="product-item p-d-flex p-jc-center">
       <div class="p-d-flex p-flex-column">
         <div class="p-d-flex p-jc-center">
           <div class="card">
-            <h1 class="p-mb-1">{{ wallets.name }}</h1>
+            <h1 class="p-mb-1">{{ wallet.name }}</h1>
             <div class="graphic-bar">
-              <div class="income-bar" style="width: {{ bars[wallets.id].barIncome }}%"></div>
-              <div class="outcome-bar" style="width: {{ bars[wallets.id].barOutcome }}%  "></div>
+              <div class="income-bar" style="width: {{ bars[wallet.id].barIncome }}%"></div>
+              <div class="outcome-bar" style="width: {{ bars[wallet.id].barOutcome }}%  "></div>
             </div>
             <div class="p-d-flex p-jc-between">
               <div class="p-d-flex p-flex-column p-ai-start">
-                <span class="income">{{ bars[wallets.id].barIncome }} %</span>
-                <h4 class="income">{{ functionalities.formatCurrency(wallets.income) }}</h4>
+                <span class="income">{{ bars[wallet.id].barIncome }} %</span>
+                <h4 class="income">{{ functionalities.formatCurrency(wallet.income) }}</h4>
               </div>
 
               <div class="p-d-flex p-flex-column p-ai-end">
-                <span class="outcome">{{ bars[wallets.id].barOutcome }} %</span>
+                <span class="outcome">{{ bars[wallet.id].barOutcome }} %</span>
                 <h4 class="outcome">
-                  {{ functionalities.formatCurrency(wallets.outcome) }}
+                  {{ functionalities.formatCurrency(wallet.outcome) }}
                 </h4>
               </div>
             </div>
