--- a/src/app/components/transactions/components-addons/card-transaction/card-transaction.component.scss
+++ b/src/app/components/transactions/components-addons/card-transaction/card-transaction.component.scss
@@ -10,7 +10,7 @@
   border-radius: 10px;
 
   margin-bottom: 20px;
-  height: 15vh;
+  height: 10vh;
   width: 50vw;
 }
 
@@ -22,15 +22,15 @@
 
   border-radius: 10px 0 0 10px;
   width: 20%;
-}
 
-.icon i {
-  font-size: 3.5rem;
-}
+  span {
+    font-weight: 700;
+    margin-top: 15px;
+  }
 
-.icon span {
-  font-weight: 700;
-  margin-top: 15px;
+  i {
+    font-size: 2rem;
+  }
 }
 
 .card-body {
@@ -44,10 +44,14 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  align-items: flex-start;
 
-  padding: 10px 0 20px 30px;
-  height: 100%;
+  margin: 8px 20px;
   width: 100%;
+
+  h2 {
+    margin: 0;
+  }
 }
 
 .card-price {
@@ -55,7 +59,12 @@
   justify-content: space-between;
   flex-direction: column;
   align-items: flex-end;
-  padding: 10px 30px 20px 0;
+
+  margin: 8px 20px;
+
+  h2 {
+    margin: 0;
+  }
 }
 
 .income {
