chore: create new inputs in the modal

--- a/src/app/components/carousel-wallets/carousel-wallets.component.scss
+++ b/src/app/components/carousel-wallets/carousel-wallets.component.scss
@@ -31,22 +31,22 @@
   font-weight: 700;
   margin-top: 5px;
   margin-bottom: 2px;
-  color: #0f7e01;
+  color: #33c759;
 }
 
 .outcome {
   font-weight: 700;
   margin-top: 5px;
   margin-bottom: 2px;
-  color: #f83a3a;
+  color: #ff4b55;
 }
 
 .income-bar {
-  background-color: #0f7e01;
+  background-color: #33c759;
   height: 100%;
 }
 
 .outcome-bar {
-  background-color: #f83a3a;
+  background-color: #ff4b55;
   height: 100%px;
 }
