--- a/src/app/components/speed-dial-button/speed-dial-button.component.scss
+++ b/src/app/components/speed-dial-button/speed-dial-button.component.scss
@@ -73,8 +73,8 @@
   }
 
   .speeddial-tooltip-demo {
-    height: 89vh;
-    width: 98vw;
+    height: 88vh;
+    margin-right: 30px;
     position: fixed;
     .p-speeddial-direction-up {
       &.speeddial-left {
