feat: transaction button action

--- a/src/app/components/create-transaction/create-transaction.component.html
+++ b/src/app/components/create-transaction/create-transaction.component.html
@@ -136,7 +136,7 @@
       <div class="p-field p-col-6">
         <div class="p-inputgroup">
           <!-- <span class="p-inputgroup-addon"><i class="pi pi-home"></i></span> -->
-          <input type="text" pInputText placeholder="Categoria" formControlName="category" />
+          <input type="text" pInputText placeholder="Nova categoria" formControlName="category" />
 
           <button
             type="button"
